add action section inside main

--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
         </div>
     </header>
     <main>
-
+        <div class="action">
+            <div class="action-titlebar">
+                <h3 class="action-title title-font title-color">See It in Action</h3>
+                <p class="action-disc title-font-disc">Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="btn">Launch Live Preview</button>
+            </div>
+            <div>
+                <img class="action-img" src="Assets/wc-mini.png" alt="Loading Image Please wait..">
+            </div>
+        </div>
     </main>
     <footer>
 
