add user statistics section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
                 <img class="action-img" src="Assets/wc-mini.png" alt="Loading Image Please wait..">
             </div>
         </div>
+        <section class="user">
+            <h3 class="user-title title-font">Joined Thousands of Productive Users</h3>
+            <div class="users-section">
+                <div class="user-data">
+                    <p class="user-num inter-font">50K</p>
+                    <p class="user-name inter-font">Active Users</p>
+                </div>
+                <div class="user-data">
+                    <p class="user-num inter-font">2M+</p>
+                    <p class="user-name inter-font">Focus Sessions</p>
+                </div>
+                <div class="user-data">
+                    <p class="user-num inter-font">95%</p>
+                    <p class="user-name inter-font">Satisfaction Rate</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
