add footer and touch section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,22 @@
         </section>
     </main>
     <footer>
-
+        <section class="contact-section">
+            <div class="touch-left">
+                <h2 class="title-font">Let’s Get in Touch</h2>
+            </div>
+            <div class="contact-right">
+                <form class="contact-form">
+                    <label class="inter-font" for="eml">Email</label>
+                    <input type="email" id="eml" placeholder="example@email.com">
+                    <label class="inter-font" for="name">Name</label>
+                    <input type="text" id="name" placeholder="Full name">
+                    <label class="inter-font" for="msg">Message</label>
+                    <textarea class="inter-font" name="" id="msg">write your message....</textarea>
+                    <button class="btn" type="submit">Get in Touch</button>
+                </form>
+            </div> 
+        </section>              
     </footer>
 </body>
 </html>
