add the footer section with nev ber and logo

--- a/index.html
+++ b/index.html
@@ -70,7 +70,20 @@
                     <button class="btn" type="submit">Get in Touch</button>
                 </form>
             </div> 
-        </section>              
+        </section> 
+        <section class="footer-section">
+                <h2 class="footer-logo inter-font">LOGO</h2>
+                <p class="footer-description inter-font">
+                Ready to elevate your online presence? Contact us today to discuss <br>
+                your project and discover how we can bring your vision to life.
+                </p>
+            <ul class="footer-nav">
+                <li class="inter-font"><a href="#">Home</a></li>
+                <li class="inter-font"><a href="#">About</a></li>
+                <li class="inter-font"><a href="#">How it Works</a></li>
+                <li class="inter-font"><a href="#">Services</a></li>
+            </ul>     
+        </section>          
     </footer>
 </body>
 </html>
