change the header, main bg color and footer bg color

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="main-content">
     <header class="heading-section">
         <nav>
             <h3 class="nav-logo inter-font praimary-color">LOGO</h3>
@@ -70,6 +71,7 @@
             </div> 
         </section> 
     </main>
+    </div>
     <footer>     
         <section class="footer-section">
                 <h2 class="footer-logo inter-font">LOGO</h2>
